--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -533,7 +533,7 @@
     <string name="clear_cache">Supprimer le cache</string>
 
     <!-- Setting sections -->
-    <string name="visibility">Visibilité</string>a
+    <string name="visibility">Visibilité</string>
     <string name="security">Sécurité</string>
     <string name="scrolling">Défilement</string>
     <string name="file_operations">Opérations de fichiers</string>
